# the_navigation_gauntlet

./: .pre-commit-config.yaml  README.md  TODO.md  YamlWorld.md
gauntlet_analysis/: package.xml  setup.cfg  setup.py
gauntlet_analysis/gauntlet_analysis/: analyze_bag.py  trial_bag.py
gauntlet_runner/: README.md  package.xml  setup.cfg  setup.py
gauntlet_runner/gauntlet_runner/: exploration.py  recorder.py  run_trial.py  run_trials.py
gauntlet_runner/launch/: trial.launch.py
navigation_metrics/: package.xml  setup.cfg  setup.py
navigation_metrics/navigation_metrics/: __init__.py  analyze_bag.py  analyze_bags.py  bag_message.py  basic.py  compute.py  dimension.py  flexible_bag.py  list_metrics.py  metric.py  obstacles.py  parameters.py  path.py  plot.py  util.py  velocity.py  window.py
navigation_metrics/navigation_metrics/metrics/: basic.py  compute.py  holonomic.py  obstacles.py  path.py  velocity.py
navigation_metrics_viz/: package.xml  setup.cfg  setup.py
navigation_metrics_viz/navigation_metrics_viz/: histo.py  plot.py  plot_bag.py  plot_means.py  viz_trial.py
