<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gauntlet_analysis</name>
  <version>0.0.0</version>
  <description>Logic for analyzing a group of bag files from navigation trials</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <depend>action_msgs</depend>
  <depend>rosidl_runtime_py</depend>
  <!-- depend>rosbags</depend -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
