<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation_metrics</name>
  <version>0.0.0</version>
  <description>Tools for computing a collection of metrics about navigation behavior</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD 3-clause</license>
  <depend>action_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>polygon_utils</depend>
  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>std_msgs</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
